[translate] finishing translate functional

--- a/src/assets/translation/id.json
+++ b/src/assets/translation/id.json
@@ -1,3 +1,5 @@
 {
-    "login":"masuk"
+    "login":"Silahkan masuk ke aplikasi",
+    "login.button":"Masuk",
+    "login.subtitle":"Silahkan masukkan email dan password"
 }
