--- a/src/assets/translation/en.json
+++ b/src/assets/translation/en.json
@@ -1,3 +1,5 @@
 {
-    "login":"login"
+    "login":"Login into ticket app",
+    "login.button":"Login",
+    "login.subtitle":"Enter your email and password below"
 }
